# scope

./: .gitignore  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.scope/research/: worktrees.md
.tickets/: s-2bfe.md  s-6b3b.md
agents/: scope-orchestrator.md
docs/: 01-ux.md  02-architecture.md  04-tech-tree.md
notes/: d5-workflow-builder.md  d6-verifier-nlu.md
plans/: 2025-12-18.md
src/scope/: __init__.py  cli.py  workflow.py
src/scope/commands/: abort.py  check_termination.py  commit.py  estimate.py  evolve.py  exit.py  optimize.py  poll.py  resume.py  rubric.py  setup.py  spawn.py  top.py  trajectory.py  uninstall.py  wait.py  workflow_cmd.py
src/scope/core/: contract.py  evolve.py  loop.py  session.py  state.py  termination.py  tmux.py  verify.py
src/scope/hooks/: handler.py  install.py
src/scope/prompts/: __init__.py
src/scope/prompts/commands/: scope.md
src/scope/prompts/dspy_skills/: __init__.py  optimize.py  skills.py
src/scope/prompts/skills/: dag.md  maker-checker.md  map-reduce.md  ralph.md  rlm.md  tdd.md
src/scope/tui/: app.py
tests/: conftest.py  test_abort.py  test_alias.py  test_conditional.py  test_contract.py  test_dag.py  test_evolve.py  test_exit.py  test_hooks.py  test_loop.py  test_lru.py  test_pattern.py  test_resume.py  test_rubric.py  test_spawn.py  test_state.py  test_termination.py  test_tmux.py  test_top.py  test_trajectory.py  test_uninstall.py  test_verify.py  test_workflow.py  test_workflow_cmd.py
workflows/: evolve_feature.py
(+1 files in other folders)
