[project]
name = "scope"
version = "0.1.0"
description = "Subagent orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "click>=8.0.0",
    "orjson>=3.9.0",
    "watchfiles>=0.21.0",
]

[project.scripts]
scope = "scope.cli:main"
scope-hook = "scope.hooks.handler:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope"]
